--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         }
     ],
     "require": {
-        "zendframework/zend-eventmanager": "^3.2"
+        "zendframework/zend-eventmanager": "^3.2",
+        "zendframework/zend-log": "^2.12"
     }
 }
