--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     ],
     "require": {
         "zendframework/zend-eventmanager": "^3.2",
-        "zendframework/zend-log": "^2.12"
+        "zendframework/zend-log": "^2.12",
+        "zendframework/zend-cache": "^2.9"
     }
 }
